--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 appdirs==1.4.4
-asgiref==3.3.1
+asgiref==3.3.4
 black==20.8b1
 certifi==2020.12.5
 click==7.1.2
-Django==3.1.5
+Django==3.2
 mypy-extensions==0.4.3
 pathspec==0.8.1
-python-dotenv==0.15.0
-pytz==2020.5
-regex==2020.11.13
+Pillow==8.2.0
+python-dotenv==0.17.0
+pytz==2021.1
+regex==2021.4.4
+reportlab==3.5.67
 sqlparse==0.4.1
 toml==0.10.2
 typed-ast==1.4.2
